# vibelympics

./: Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  round-1-ci.yml  round-2-ci.yml  round-3-ci.yml
docs/: CODING_STANDARDS.md  GAME_DESIGN.md  PRD.md  SECURITY.md  TECHNICAL_SPEC.md
round_1/: .gitignore  pyproject.toml
round_1/.github/: CODEOWNERS
round_1/.github/workflows/: pr-check.yml
round_1/docs/: IMPLEMENTATION_GUIDE.md  SECURITY_REVIEW.md
round_1/src/: game_engine.py  models.py  world.py
round_1/src/static/: game.js  index.html  styles.css
round_1/tests/: test_app.py  test_game_engine.py  test_gameplay_sequences.py  test_models.py  test_security.py  test_world.py
round_2/: README.md  docker-compose.yml
round_2/backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  railway.json  requirements.txt  run.py
round_2/docs/: ADR-001-architecture.md  DESIGN.md  IMPROVEMENTS.md  PRD.md  RED_TEAM_ASSESSMENT.md  RED_TEAM_EXECUTIVE_SUMMARY.md  RED_TEAM_POC.sh  SECURITY_QUICK_FIXES.md  SRS.md  STYLE_GUIDE.md
round_2/frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  railway.json  tailwind.config.js  vite.config.js
round_3/: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY_ASSESSMENT_REPORT.md  docker-compose.yml  railway.json  run.py
round_3/apko/: python-3.12.yaml
round_3/backend/: main.py  requirements.txt
round_3/docs/: ADR-001-architecture.md  SRS-PARANOID.md  paranoid-meme-generator-spec.md  (+2 more)
src/: app.py  game_engine.py  models.py  world.py
tests/: test_game_engine.py  test_security.py
(+52 files in other folders)
